--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -12,6 +12,7 @@ compileJava {
 
 java {
     withJavadocJar()
+    withSourcesJar()
 }
 
 task testJar(type: Jar, dependsOn: testClasses, group: "build") {
@@ -37,6 +38,12 @@ if (JavaVersion.current().isJava8Compatible()) {
     tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
     }
+}
+
+javadoc {
+    H2OBuildVersion bv = new H2OBuildVersion(rootDir, version)
+    def tmp = title.tokenize()[0] +  " version " + bv.getProjectVersion() + " API"
+    title = tmp
 }
 
 plugins.withType(org.gradle.api.publish.maven.plugins.MavenPublishPlugin) {
