--- a/h2o-r/h2o-package/pkgdown/_pkgdown.yml
+++ b/h2o-r/h2o-package/pkgdown/_pkgdown.yml
@@ -227,6 +227,7 @@ reference:
       - h2o.removeAll
       - h2o.removeVecs
       - h2o.rep_len
+      - h2o.reset_threshold
       - h2o.residual_deviance 
       - h2o.residual_dof
       - h2o.retain
@@ -284,6 +285,7 @@ reference:
       - h2o.trim
       - h2o.trunc
       - h2o.unique
+      - h2o.upload_mojo
       - h2o.var 
       - h2o.varimp_plot
       - h2o.varimp 
