PUBDEV-7138 - first version of R interface for Extended Isolation Forest
Implementation is based on Isolation Forest interface.

--- a/h2o-r/h2o-package/pkgdown/_pkgdown.yml
+++ b/h2o-r/h2o-package/pkgdown/_pkgdown.yml
@@ -154,6 +154,7 @@ reference:
       - h2o.isfactor
       - h2o.isnumeric
       - h2o.isolationForest
+      - h2o.extendedIsolationForest
       - h2o.kfold_column
       - h2o.killMinus3
       - h2o.kmeans
