--- a/h2o-r/h2o-DESCRIPTION.template
+++ b/h2o-r/h2o-DESCRIPTION.template
@@ -75,6 +75,7 @@ Collate:
          'targetencoder.R'
          'import.R'
          'isolationforest.R'
+         'extendedisolationforest.R'
          'parse.R'
          'export.R'
          'edicts.R'
