--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -1,10 +1,14 @@
-apply plugin: 'release'
+apply plugin: 'net.researchgate.release'
 apply plugin: 'nexus-workflow'
 
 release {
-  tagPrefix = "release"
-  // Safe point - do releases only from release branch - can be deleted in future
-  //requireBranch = "testing"
+    failOnCommitNeeded = true
+    tagTemplate = 'jenkins-$version'
+    tagCommitMessage = "[H2O Release] :"
+    newVersionCommitMessage = "[Reverting back to H2O version] :"
+    git {
+        requireBranch = "rel-[a-zA-Z]*|master"
+    }
 }
 
 // Helper task uploading all artifacts
@@ -18,7 +22,3 @@ publishAll.dependsOn {
 task stageAll
 stageAll.dependsOn publishAll, nexusStagingRelease
 nexusStagingRelease.mustRunAfter publishAll
-
-
-// Create release as final step
-createReleaseTag.dependsOn stageAll
