--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include 'h2o-parquet-v17-compat'
 include 'h2o-jaas-pam'
 include 'h2o-automl'
 include 'h2o-genmodel-ext-xgboost'
+include 'h2o-genmodel-ext-klime'
 include 'h2o-ext-xgboost'
 include 'h2o-ext-krbstandalone'
 include 'h2o-webserver-iface'
