--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ systemProp.https.protocols=TLSv1,TLSv1.1,TLSv1.2
 #   - https://github.com/gradle/gradle/issues/4629
 systemProp.org.gradle.internal.http.connectionTimeout=300000
 systemProp.org.gradle.internal.http.socketTimeout=300000
-version=3.30.0
+version=3.31.1
 # Default build profile
 profile=Java
 # Branch codename (filled by releases)
-codename=zahradnik
+codename=zahradnik-1-rc
 # Run findbugs
 doFindbugs=false
 # Run animal sniffer to verify compatibility of API with actual Java version
