--- a/h2o-r/h2o-package/pkgdown/_pkgdown.yml
+++ b/h2o-r/h2o-package/pkgdown/_pkgdown.yml
@@ -32,6 +32,8 @@ reference:
       - colnames
       - dim.H2OFrame
       - dimnames.H2OFrame
+      - feature_frequencies.H2OModel
+      - get_seed.H2OModel
       - h2o
       - h2o.abs
       - h2o.acos
@@ -96,6 +98,7 @@ reference:
       - h2o.dim
       - h2o.dimnames
       - h2o.distance
+      - h2o.download_model
       - h2o.download_mojo
       - h2o.download_pojo
       - h2o.downloadAllLogs
@@ -113,8 +116,11 @@ reference:
       - h2o.flow
       - h2o.gainsLift
       - h2o.gbm
+      - h2o.genericModel
       - h2o.get_automl
-      - h2o.get_leadeboard
+      - h2o.get_leaderboard
+      - h2o.get_ntrees_actual
+      - h2o.get_segment_models
       - h2o.getConnection
       - h2o.getFrame
       - h2o.getFutureModel
@@ -154,6 +160,7 @@ reference:
       - h2o.isfactor
       - h2o.isnumeric
       - h2o.isolationForest
+      - h2o.keyof
       - h2o.kfold_column
       - h2o.killMinus3
       - h2o.kmeans
@@ -162,7 +169,9 @@ reference:
       - h2o.list_all_extensions
       - h2o.list_api_extensions
       - h2o.list_core_extensions
+      - h2o.list_jobs
       - h2o.listTimezones
+      - h2o.loadGrid
       - h2o.loadModel
       - h2o.log
       - h2o.log1p
@@ -181,6 +190,7 @@ reference:
       - h2o.mean_residual_deviance
       - h2o.mean
       - h2o.median
+      - h2o.melt
       - h2o.merge
       - h2o.metric
       - h2o.min
@@ -210,6 +220,7 @@ reference:
       - h2o.performance
       - h2o.pivot
       - h2o.prcomp
+      - h2o.predict
       - h2o.predict_json
       - h2o.print
       - h2o.prod 
@@ -227,15 +238,17 @@ reference:
       - h2o.removeAll
       - h2o.removeVecs
       - h2o.rep_len
+      - h2o.reset_threshold
       - h2o.residual_deviance 
       - h2o.residual_dof
-      - h2o.retain
       - h2o.rm 
       - h2o.rmse
       - h2o.rmsle
       - h2o.round
       - h2o.rstrip
       - h2o.runif
+      - h2o.save_mojo
+      - h2o.saveGrid
       - h2o.saveModel
       - h2o.saveModelDetails
       - h2o.saveMojo
@@ -243,6 +256,7 @@ reference:
       - h2o.scoreHistory
       - h2o.sd 
       - h2o.sdev
+      - h2o.set_s3_credentials
       - h2o.setLevels
       - h2o.setTimezone
       - h2o.show_progress
@@ -272,6 +286,7 @@ reference:
       - h2o.target_encode_create
       - h2o.target_encode_fit
       - h2o.target_encode_transform
+      - h2o.targetencoder
       - h2o.toFrame
       - h2o.tokenize
       - h2o.tolower
@@ -281,12 +296,18 @@ reference:
       - h2o.toupper
       - h2o.train_segments
       - h2o.transform
+      - h2o.transform_word2vec
+      - h2o.transform,H2OTargetEncoderModel-method
+      - h2o.transform,H2OWordEmbeddingModel-method
       - h2o.trim
       - h2o.trunc
       - h2o.unique
+      - h2o.upload_model
+      - h2o.upload_mojo
       - h2o.var 
       - h2o.varimp_plot
       - h2o.varimp 
+      - h2o.varsplits
       - h2o.week 
       - h2o.weights
       - h2o.which_max
@@ -319,6 +340,7 @@ reference:
       - is.factor 
       - is.h2o 
       - is.numeric
+      - length,H2OTree-method
       - Logical-or
       - ModelAccessors
       - names.H2OFrame
