--- a/gradle.properties
+++ b/gradle.properties
@@ -16,11 +16,14 @@ doFindbugs=false
 # Run animal sniffer to verify compatibility of API with actual Java version
 doAnimalSniffer=false
 
-# The flag to include ORC support inside default h2o.jar.
+# include ORC support inside default h2o.jar.
 doIncludeOrc=false
 
-# The flag to include MOJO Pipeline support inside default h2o.jar.
+# include MOJO Pipeline support inside default h2o.jar.
 doIncludeMojoPipeline=false
+
+# enable building hadoop distributions
+hadoopTargets=
 
 #
 # Gradle arguments
@@ -36,7 +39,6 @@ doUBench=true
 # Upload micro bench results into shared bucket hosted in S3
 # It needs AWS credentials to be configured in environment
 doUploadUBenchResults=false
-
 #
 # Internal Nexus location
 #
@@ -50,7 +52,6 @@ publicNexusLocation="http://nexus.h2o.ai:8081/repository"
 ##
 # Version of libraries used inside H2O
 ##
-
 httpClientVersion=4.5.2
 
 # Version of Apache Parquet dependency (should be kept in sync with the version used in current Spark releases)
