--- a/settings.gradle
+++ b/settings.gradle
@@ -177,17 +177,29 @@ rootProject.children.each { project ->
 //
 if (System.getProperty("user.name").equals("jenkins")
         || System.getenv("BUILD_HADOOP") != null
-        || System.getenv("H2O_TARGET") != null) {
-
-  // Default hadoop build targets
-  def allTargets = [
-         "cdh5.4", "cdh5.5", "cdh5.6", "cdh5.7", "cdh5.8", "cdh5.9", "cdh5.10", "cdh5.13", "cdh5.14", "cdh5.15", "cdh5.16", 
-         "cdh6.0", "cdh6.1", "cdh6.2", "cdh6.3", "cdp7.0",
-         "hdp2.2", "hdp2.3", "hdp2.4", "hdp2.5", "hdp2.6","hdp3.0","hdp3.1",
-         "mapr4.0", "mapr5.0", "mapr5.1", "mapr5.2", "mapr6.0", "mapr6.1", "iop4.2"
-  ]
+        || System.getenv("H2O_TARGET") != null
+        || hadoopTargets) {
+  // check if a filter prop or env var is defined
+  def targetsFilter
+  if (System.getenv("H2O_TARGET") != null) {
+    // env can override gradle property
+    targetsFilter = System.getenv("H2O_TARGET")
+  } else if (hadoopTargets) {
+    targetsFilter = hadoopTargets
+  }
   // Compute targets
-  def targets = System.getenv("H2O_TARGET") != null ? System.getenv("H2O_TARGET").split(",").collect { it.trim() } : allTargets
+  def targets
+  if (targetsFilter) {
+    targets = targetsFilter.split(",").collect { it.trim() }
+  } else {
+    targets = [ // build all
+            "cdh5.4", "cdh5.5", "cdh5.6", "cdh5.7", "cdh5.8", "cdh5.9", "cdh5.10", "cdh5.13", "cdh5.14", "cdh5.15", "cdh5.16",
+            "cdh6.0", "cdh6.1", "cdh6.2", "cdh6.3", "cdp7.0",
+            "hdp2.2", "hdp2.3", "hdp2.4", "hdp2.5", "hdp2.6","hdp3.0","hdp3.1",
+            "mapr4.0", "mapr5.0", "mapr5.1", "mapr5.2", "mapr6.0", "mapr6.1", "iop4.2"
+    ]
+  }
+  logger.debug("Building hadoops " + targets)
   // Include selected/all Hadoop targets
   if (System.getenv("BUILD_HADOOP") != "false") {
     targets.each { name ->
@@ -195,4 +207,6 @@ if (System.getProperty("user.name").equals("jenkins")
       include "h2o-hadoop-3:h2o-${name}-assembly"
     }
   }
+} else {
+  logger.debug("Not building hadoop jars")
 }
