[PUBDEV-7467] multindoe fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ doIncludeOrc=false
 doIncludeMojoPipeline=false
 
 # enable building hadoop distributions
-hadoopTargets=
+hadoopTargets=hdp2.2
 
 #
 # Gradle arguments
