--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ doIncludeOrc=false
 doIncludeMojoPipeline=false
 
 # enable building hadoop distributions
-hadoopTargets=hdp2.2
+hadoopTargets=
 
 #
 # Gradle arguments
