PUBDEV-7586 - Create official Docker hub image

--- a/scripts/jenkins/Makefile.jenkins
+++ b/scripts/jenkins/Makefile.jenkins
@@ -485,3 +485,11 @@ check-leaks:
 		echo "Credentials leaked! Please check $(PWD)/leak-check.out"; \
 		exit 1; \
 	fi
+
+h2o-docker-build:
+    docker build -t h2oai/h2o-open-source:$(DOCKER_IMAGE_TAG) -f docker/public/Dockerfile-h2o-release .
+
+h2o-docker-push:
+    docker login -u $(DOCKERHUB_USERNAME) -p $(DOCKERHUB_PASSWORD)
+    docker push h2oai/h2o-open-source:$(DOCKER_IMAGE_TAG)
+
