--- a/scripts/jenkins/Makefile.jenkins
+++ b/scripts/jenkins/Makefile.jenkins
@@ -487,9 +487,9 @@ check-leaks:
 	fi
 
 h2o-docker-build:
-    docker build -t h2oai/h2o-open-source-k8s:$(DOCKER_IMAGE_TAG) -f docker/public/Dockerfile-h2o-release .
+    docker build -t $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG) -f docker/public/Dockerfile-h2o-release .
 
 h2o-docker-push:
     docker login -u $(DOCKERHUB_USERNAME) -p $(DOCKERHUB_PASSWORD)
-    docker push h2oai/h2o-open-source-k8s:$(DOCKER_IMAGE_TAG)
+    docker push $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG)
 
