--- a/docker/public/Dockerfile-h2o-release
+++ b/docker/public/Dockerfile-h2o-release
@@ -1,6 +1,6 @@
 FROM openjdk:11
 
 RUN mkdir -p /opt/h2oai/h2o-3/
-COPY h2o.jar /opt/h2oai/h2o-3/
+COPY build/git sh2o.jar /opt/h2oai/h2o-3/
 
 CMD java -XX:+UseContainerSupport -jar /opt/h2oai/h2o-3/h2o.jar
