--- a/scripts/jenkins/Makefile.jenkins
+++ b/scripts/jenkins/Makefile.jenkins
@@ -487,7 +487,7 @@ check-leaks:
 	fi
 
 h2o-docker-build:
-	ifdef DOCKER_IMAGE_LATEST_TAG
+	ifeq ($(DOCKER_IMAGE_LATEST_TAG),)
 		SECOND_TAG=-t $(DOCKER_IMAGE_NAME):${DOCKER_IMAGE_LATEST_TAG}
 	endif
 	docker build -t $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG) $(SECOND_TAG) -f docker/public/Dockerfile-h2o-release build/
@@ -495,7 +495,7 @@ h2o-docker-build:
 h2o-docker-push:
 	docker login -u $(DOCKERHUB_USERNAME) -p $(DOCKERHUB_PASSWORD)
 	docker push $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG)
-	ifdef DOCKER_IMAGE_LATEST_TAG
+	ifeq ($(DOCKER_IMAGE_LATEST_TAG),)
 		docker push $(DOCKER_IMAGE_NAME):${DOCKER_IMAGE_LATEST_TAG}
 	endif
 
