--- a/gradle/multiNodeTesting.gradle
+++ b/gradle/multiNodeTesting.gradle
@@ -1,6 +1,6 @@
 // Actually run the tests by building a cluster of free-running JVMs first.
 task testSingleNode(type: Exec) {
-    dependsOn jar, testJar, ":${defaultWebserverModule}:jar"
+    dependsOn jar, testJar
 
     environment "ROOT_DIR", rootDir
     environment "PROJECT_NAME", project.name
@@ -16,7 +16,7 @@ task testSingleNode(type: Exec) {
     commandLine args
 }
 task testSingleNodeOneProc(type: Exec) {
-    dependsOn jar, testJar, ":${defaultWebserverModule}:jar"
+    dependsOn jar, testJar
 
     environment "ROOT_DIR", rootDir
     environment "PROJECT_NAME", project.name
@@ -32,7 +32,7 @@ task testSingleNodeOneProc(type: Exec) {
     commandLine args
 }
 task testMultiNode(type: Exec) {
-    dependsOn jar, testJar, ":${defaultWebserverModule}:jar"
+    dependsOn jar, testJar
 
     environment "ROOT_DIR", rootDir
     environment "PROJECT_NAME", project.name
