--- a/h2o-app/build.gradle
+++ b/h2o-app/build.gradle
@@ -9,7 +9,7 @@ dependencies {
   compile project(":h2o-algos")
   compile project(":h2o-automl")
   compile project(":h2o-ext-target-encoder")
-  runtime project(":${defaultWebserverModule}")
+  runtimeOnly project(":${defaultWebserverModule}")
   if (project.hasProperty("doIncludeMojoPipeline") && project.doIncludeMojoPipeline == "true") {
     compile project(":h2o-ext-mojo-pipeline")
   }
