--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -14,9 +14,10 @@ java {
     withJavadocJar()
 }
 
-task testJar(type: Jar, dependsOn: testClasses, group: "build") {
-    from sourceSets.test.output + sourceSets.test.runtimeClasspath
+task testJar(type: Jar) {
+    from sourceSets.test.output + configurations.testRuntimeClasspath
 }
+
 
 // Enable support for multi-node testing
 apply from: "$rootDir/gradle/multiNodeTesting.gradle"
