--- a/h2o-test-support/build.gradle
+++ b/h2o-test-support/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
-  compileOnly project(':h2o-core')
+  compile project(':h2o-core')
   
   compile "junit:junit:${junitVersion}"
   compile "com.google.guava:guava:16.0.1"
