PUBDEV-7360 - Kubernetes clustering via REST API

--- a/h2o-assemblies/main/build.gradle
+++ b/h2o-assemblies/main/build.gradle
@@ -85,6 +85,7 @@ shadowJar {
     file = file("${buildDir}/reports/license/dependency-license.xml")
     resource = "META-INF/license/h2o-depenencies-licenses.xml"
   }
+  zip64 true
 }
 
 artifacts {
