--- a/h2o-k8s/build.gradle
+++ b/h2o-k8s/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     compile 'org.nanohttpd:nanohttpd:2.3.1'
     compile 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     compile 'org.nanohttpd:nanohttpd-nanolets:2.3.1'
+    compile 'io.kubernetes:client-java:8.0.2'
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'com.github.stefanbirkner:system-rules:1.19.0'
