--- a/h2o-py/requirements.txt
+++ b/h2o-py/requirements.txt
@@ -5,6 +5,11 @@ tabulate
 colorama>=0.3.8
 
 # [optional/integration dependencies]
+# Commented out libraries below are used in h2o-py module or in demos
+# but are not required to use the package: they may be necessary for some specific features (e.g. plotting)
+# or to provide easy integration (e.g. pandas).
+# They are listed here mainly for reference.
+
 # [-authentication]
 pykerberos >= 1.1.8, < 2.0.0; sys.platform != 'win32'
 winkerberos >= 0.5.0; sys.platform == 'win32'
