--- a/h2o-jetty-8/build.gradle
+++ b/h2o-jetty-8/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-server:8.1.21.v20160908'
     compile "org.eclipse.jetty:jetty-servlets:8.1.21.v20160908"
     compile "org.eclipse.jetty:jetty-plus:8.1.21.v20160908"
+    compile "org.eclipse.jetty:jetty-websocket:8.1.21.v20160908"
     testCompile group: "junit", name: "junit", version: "4.12"
     testCompile "org.mockito:mockito-core:2.23.0"
 }
