--- a/h2o-jetty-9/build.gradle
+++ b/h2o-jetty-9/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-jaas:9.3.20.v20170531'
     compile 'org.eclipse.jetty:jetty-proxy:9.3.20.v20170531'
     compile 'org.eclipse.jetty:jetty-servlet:9.3.20.v20170531'
+    compile 'org.eclipse.jetty.websocket:websocket-api:9.3.20.v20170531'
+    compile 'org.eclipse.jetty.websocket:websocket-server:9.3.20.v20170531'
     testCompile group: "junit", name: "junit", version: "4.12"
     testCompile "org.mockito:mockito-core:2.23.0"
 }
