add websocket support and PoC of Steam connector

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ ext {
       project(':h2o-ext-xgboost'),
       project(':h2o-ext-krbstandalone'),
       project(':h2o-ext-mojo-pipeline'),
+      project(':h2o-ext-steam'),
       project(':h2o-ext-target-encoder'),
       project(':h2o-webserver-iface'),
       project(':h2o-jetty-8'),
@@ -116,6 +117,7 @@ ext {
       project(':h2o-ext-xgboost'),
       project(':h2o-ext-krbstandalone'),
       project(':h2o-ext-mojo-pipeline'),
+      project(':h2o-ext-steam'),
       project(':h2o-ext-target-encoder'),
       project(':h2o-webserver-iface'),
       project(':h2o-jetty-8'),
