--- a/h2o-hadoop-2/assemblyjar.gradle
+++ b/h2o-hadoop-2/assemblyjar.gradle
@@ -30,6 +30,7 @@ dependencies {
     transitive = false
   }
   compile project(":h2o-security")
+  compile project(":h2o-ext-steam")
   // Libraries need for Google Cloud Storage strongly require this Guava version
   compile('com.google.guava:guava:20.0') {force = true}
   compile(project(':h2o-app')) {
