--- a/h2o-hive/build.gradle
+++ b/h2o-hive/build.gradle
@@ -19,6 +19,9 @@ dependencies {
   compileOnly("org.apache.hive:hive-metastore:1.1.0-cdh5.10.0") {
     transitive = false
   }
+  compile(project(':h2o-persist-hdfs')) {
+    transitive = false
+  }
   compile project(":h2o-core")
   testCompile "junit:junit:${junitVersion}"
 }
