Upgraded version of Jetty 8 to 8.2.0.v20160908.

--- a/h2o-jetty-9/build.gradle
+++ b/h2o-jetty-9/build.gradle
@@ -1,12 +1,12 @@
 dependencies {
     compile project(":h2o-webserver-iface")
-    compile 'org.eclipse.jetty:jetty-server:9.4.30.v20200611'
-    compile "org.eclipse.jetty:jetty-servlets:9.4.30.v20200611"
-    compile 'org.eclipse.jetty:jetty-jaas:9.4.30.v20200611'
-    compile 'org.eclipse.jetty:jetty-proxy:9.4.30.v20200611'
-    compile 'org.eclipse.jetty:jetty-servlet:9.4.30.v20200611'
-    compile 'org.eclipse.jetty.websocket:websocket-api:9.4.30.v20200611'
-    compile 'org.eclipse.jetty.websocket:websocket-server:9.4.30.v20200611'
+    compile "org.eclipse.jetty:jetty-server:${jetty9version}"
+    compile "org.eclipse.jetty:jetty-servlets:${jetty9version}"
+    compile "org.eclipse.jetty:jetty-jaas:${jetty9version}"
+    compile "org.eclipse.jetty:jetty-proxy:${jetty9version}"
+    compile "org.eclipse.jetty:jetty-servlet:${jetty9version}"
+    compile "org.eclipse.jetty.websocket:websocket-api:${jetty9version}"
+    compile "org.eclipse.jetty.websocket:websocket-server:${jetty9version}"
     testCompile group: "junit", name: "junit", version: "4.12"
     testCompile "org.mockito:mockito-core:2.23.0"
 }
