--- a/gradle.properties
+++ b/gradle.properties
@@ -65,3 +65,5 @@ defaultHdfsDependency=hadoop-hdfs-client
 defaultHiveExecVersion=1.1.0
 
 defaultWebserverModule=h2o-jetty-9
+jetty8version=8.2.0.v20160908
+jetty9version=9.4.30.v20200611
