HEXDEV-757 Update Jackson to latest version 2.11.1

--- a/h2o-persist-hdfs/build.gradle
+++ b/h2o-persist-hdfs/build.gradle
@@ -13,7 +13,9 @@ dependencies {
         // Pull all dependencies to allow run directly from IDE or command line
         transitive = true
     }
-    compile("org.apache.hadoop:hadoop-aws:$defaultHadoopVersion")
+    compile("org.apache.hadoop:hadoop-aws:$defaultHadoopVersion"){
+        exclude group: "com.fasterxml.jackson.core"
+    }
 
     testCompile project(":h2o-test-support")
     testRuntimeOnly project(":${defaultWebserverModule}")
