--- a/docker/jenkins-images/Dockerfile-r-base
+++ b/docker/jenkins-images/Dockerfile-r-base
@@ -7,7 +7,7 @@ RUN \
     apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 51716619E084DAB9 && \
     sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list && \
     apt-get update && \
-    apt-get install -y zip python-pip libglu1-mesa-dev && \
+    apt-get install -y zip python-pip libglu1-mesa-dev libpcre2-dev && \
     apt-get -y build-dep r-base && \
     apt-get -y remove openjdk-8-jdk openjdk-8-jdk-headless openjdk-8-jre openjdk-8-jre-headless && \
     apt-get clean && \
