--- a/docker/jenkins-images/Dockerfile-jdk-others
+++ b/docker/jenkins-images/Dockerfile-jdk-others
@@ -6,11 +6,18 @@ FROM ${FROM_IMAGE}${GPU_SUFFIX}:${FROM_VERSION}
 ARG INSTALL_JAVA_VERSION
 ENV JAVA_VERSION=${INSTALL_JAVA_VERSION}
 COPY scripts/install_java_version scripts/install_java_version_local scripts/java-${JAVA_VERSION}-vars.sh \
-     jdk-12.0.2_linux-x64_bin.tar.gz jdk-11.0.3_linux-x64_bin.tar.gz jdk-10.0.2_linux-x64_bin.tar.gz jdk1.8.0_171.zip /tmp/
+     jdk-14.0.2_linux-x64_bin.tar.gz \
+     jdk-13.0.2_linux-x64_bin.tar.gz \
+     jdk-12.0.2_linux-x64_bin.tar.gz \
+     jdk-11.0.3_linux-x64_bin.tar.gz \
+     jdk-10.0.2_linux-x64_bin.tar.gz \
+     jdk1.8.0_171.zip \
+     /tmp/
 RUN \
     chmod +x /tmp/install_java_version /tmp/java-${JAVA_VERSION}-vars.sh && \
     sync && \
-    if [ "${JAVA_VERSION}" = '8' ] || [ "${JAVA_VERSION}" = '10' ] || [ "${JAVA_VERSION}" = '11' ] || [ "${JAVA_VERSION}" = '12' ]; then \
+    if [ "${JAVA_VERSION}" = '8' ] || [ "${JAVA_VERSION}" = '10' ] || [ "${JAVA_VERSION}" = '11' ] || \
+        [ "${JAVA_VERSION}" = '12' ] || [ "${JAVA_VERSION}" = '13' ] || [ "${JAVA_VERSION}" = '14' ]; then \
         /tmp/install_java_version_local ${JAVA_VERSION} /tmp/java-${JAVA_VERSION}-vars.sh; \
     else \
         /tmp/install_java_version ${JAVA_VERSION} /tmp/java-${JAVA_VERSION}-vars.sh; \
@@ -18,6 +25,10 @@ RUN \
     rm /tmp/install_java_version \
         /tmp/install_java_version_local \
         /tmp/java-${JAVA_VERSION}-vars.sh \
+        /tmp/jdk-14.0.2_linux-x64_bin.tar.gz \
+        /tmp/jdk-13.0.2_linux-x64_bin.tar.gz \
+        /tmp/jdk-12.0.2_linux-x64_bin.tar.gz \
+        /tmp/jdk-11.0.3_linux-x64_bin.tar.gz \
         /tmp/jdk-10.0.2_linux-x64_bin.tar.gz \
         /tmp/jdk1.8.0_171.zip && \
     chmod a+w /usr/lib/jvm/
