--- a/gradle.properties
+++ b/gradle.properties
@@ -61,4 +61,6 @@ defaultHdfsDependency=hadoop-hdfs-client
 # Default Hive version
 defaultHiveExecVersion=1.1.0
 
-defaultWebserverModule=h2o-jetty-8
+defaultWebserverModule=h2o-jetty-9
+jetty8version=8.2.0.v20160908
+jetty9version=9.4.11.v20180605
