--- a/docker/hadoop/hdp/Dockerfile
+++ b/docker/hadoop/hdp/Dockerfile
@@ -1,6 +1,6 @@
-# pull base image
 ARG PARENT_VERSION
-FROM harbor.h2o.ai/opsh2oai/h2o-3/dev-build-hadoop-gradle-4.10.1:${PARENT_VERSION}
+ARG GRADLE_VERSION
+FROM harbor.h2o.ai/opsh2oai/h2o-3/dev-build-hadoop-gradle-${GRADLE_VERSION}:${PARENT_VERSION}
 
 # maintainer details
 MAINTAINER h2oai "h2o.ai"
