PUBDEV-7688 - Remove Jetty 8

--- a/h2o-hadoop-2/h2o-hdp2.6-assembly/build.gradle
+++ b/h2o-hadoop-2/h2o-hdp2.6-assembly/build.gradle
@@ -9,8 +9,5 @@ ext {
 apply from: '../assemblyjar.gradle'
 
 dependencies {
-  compile(project(":h2o-jetty-8")) {
-    exclude module: "servlet-api"
-    exclude group: "javax.servlet", module: "javax.servlet-api"
-  }
+  compile project(":${defaultWebserverModule}")
 }
