--- a/h2o-hadoop-2/h2o-cdh5.10-assembly/build.gradle
+++ b/h2o-hadoop-2/h2o-cdh5.10-assembly/build.gradle
@@ -8,8 +8,5 @@ ext {
 apply from: '../assemblyjar.gradle'
 
 dependencies {
-  compile(project(":${defaultWebserverModule}")) {
-    exclude module: "servlet-api"
-    exclude group: "javax.servlet", module: "javax.servlet-api"
-  }
+  compile project(":${defaultWebserverModule}")
 }
