--- a/h2o-extensions/mojo-pipeline/build.gradle
+++ b/h2o-extensions/mojo-pipeline/build.gradle
@@ -3,6 +3,7 @@ description = "H2O MOJO Pipeline support"
 dependencies {
     compile project(":h2o-core")
     compile "ai.h2o:mojo2-runtime-api:2.4.10"
+    compile "ai.h2o:mojo2-runtime-impl:2.4.10"
 
     testCompile project(":h2o-test-support")
     testCompile "net.sf.opencsv:opencsv:2.3"
