Incorporate Erin's suggestions for R part

--- a/h2o-r/h2o-DESCRIPTION.template
+++ b/h2o-r/h2o-DESCRIPTION.template
@@ -105,8 +105,7 @@ Collate:
          'grid.R'
          'segment.R'
          'predict.R'
-         'zzz.R'
          'tf-idf.R'
          'rulefit.R'
-         'mli.R'
-         'register-s3.R'
+         'explain.R'
+         'zzz.R'
