--- a/h2o-extensions/xgboost/build.gradle
+++ b/h2o-extensions/xgboost/build.gradle
@@ -1,7 +1,7 @@
 description = "H2O XGBoost support"
 
 ext {
-    xgboost4jVersion = "1.0.0.11"
+    xgboost4jVersion = "1.2.0.3-honza-1.2.0-SNAPSHOT"
 }
 
 dependencies {
