--- a/h2o-k8s/tests/clustering/h2o-service.yaml
+++ b/h2o-k8s/tests/clustering/h2o-service.yaml
@@ -59,7 +59,7 @@ spec:
       port: 80
       targetPort: 54321
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: jenkins-ingress
@@ -68,8 +68,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - host:
-    http:
+  - http:
       paths:
       - path: /
         backend:
