--- a/h2o-helm/values.yaml
+++ b/h2o-helm/values.yaml
@@ -8,52 +8,49 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
-  
+
 h2o:
   nodeCount: 1
   memoryPercentage: 50
   lookupTimeout: 180 # Three minutes by default are very generous amount of time for clustering with parallel pod management
   kubernetesApiPort: 8080
-  
+
 
 nameOverride: ""
 
 fullnameOverride: ""
 
-podAnnotations: {}
+podAnnotations: { }
 
-podSecurityContext: {}
+podSecurityContext: { }
 
-securityContext: {}
+securityContext: { }
 
 service:
   port: 80
 
 ingress:
   enabled: false
-  annotations: {}
+  annotations: { }
     # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
-      paths: []
-  tls: []
+      paths: [ ]
+  tls: [ ]
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
-resources: 
-  limits:
-    cpu: 1
-    memory: 256Mi
-  requests:
-    cpu: 1
-    memory: 256Mi
+# For reproducibility, H2O must always have the very same resources allocated throughout the whole container lifetime
+resources:
+  cpu: 1
+  memory: 256Mi
 
-nodeSelector: {}
+nodeSelector: { }
 
-volumes: []
+volumes: [ ]
 
-tolerations: []
+tolerations: [ ]
 
-affinity: {}
+affinity: { }
