--- a/docker/jenkins-images/Dockerfile-k8s-test
+++ b/docker/jenkins-images/Dockerfile-k8s-test
@@ -13,8 +13,8 @@ RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s 
 
 RUN curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
 
-RUN curl https://baltocdn.com/helm/signing.asc | sudo apt-key add - \
-    && apt-get inastall apt-transport-https --yes \
+RUN curl https://baltocdn.com/helm/signing.asc | apt-key add - \
+    && apt-get install apt-transport-https --yes \
     && echo "deb https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list \
     && apt-get update \
     && apt-get install helm -y
