--- a/h2o-k8s/tests/clustering/testvalues-template.yaml
+++ b/h2o-k8s/tests/clustering/testvalues-template.yaml
@@ -12,6 +12,10 @@ volumes:
   hostPath:
     path: $H2O_BASE/build/h2o.jar
     type: File
+volumeMounts:
+  - name: test-volume
+    mountPath: "h2o.jar"
 image:
   name: "harbor.h2o.ai/opsh2oai/h2o-3-k8s-runner"
   tag: "2"
+  command: ["/bin/bash", "-c", "java -XX:+UseContainerSupport -XX:MaxRAMPercentage=90 -jar $H2O_BASE/build/h2o.jar/h2o.jar"]
