--- a/docker/jenkins-images/Dockerfile-k8s-test
+++ b/docker/jenkins-images/Dockerfile-k8s-test
@@ -11,7 +11,7 @@ RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s 
 	&& chmod +x ./kubectl \
 	&& mv ./kubectl /usr/local/bin/kubectl
 
-RUN curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
+RUN curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | TAG=v1.7.0 bash
 
 RUN curl https://baltocdn.com/helm/signing.asc | apt-key add - \
     && apt-get install apt-transport-https --yes \
