--- a/h2o-helm/values.yaml
+++ b/h2o-helm/values.yaml
@@ -8,6 +8,7 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+  command: []
 
 
 h2o:
