--- a/h2o-k8s/tests/clustering/testvalues-template.yaml
+++ b/h2o-k8s/tests/clustering/testvalues-template.yaml
@@ -1,6 +1,8 @@
 ingress:
   enabled: true
-  annotations: {}
+  annotations: {
+    kubernetes.io/ingress.class: traefik
+  }
   hosts:
     - host: ""
       paths: ["/"]
@@ -18,4 +20,4 @@ volumeMounts:
 image:
   name: "harbor.h2o.ai/opsh2oai/h2o-3-k8s-runner"
   tag: "3"
-  command: ["/bin/bash", "-c", "java -XX:+UseContainerSupport -XX:MaxRAMPercentage=90 -jar $H2O_BASE/build/h2o.jar/h2o.jar"]
+  command: "['/bin/bash', '-c', 'java -XX:+UseContainerSupport -XX:MaxRAMPercentage=90 -jar h2o.jar']"
