--- a/h2o-core/build.gradle
+++ b/h2o-core/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
   testCompile project(':h2o-test-support')
   testRuntimeOnly project(":${defaultWebserverModule}")
-  testCompileOnly "javax.servlet:javax.servlet-api:3.1.0"
+  testCompileOnly "javax.servlet:javax.servlet-api:${servletApiVersion}"
 }
 
 apply from: "${rootDir}/gradle/dataCheck.gradle"
