--- a/h2o-helm/templates/ingress.yaml
+++ b/h2o-helm/templates/ingress.yaml
@@ -9,6 +9,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "h2o-helm.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
