Chage name of the chart from h2o to h2o-3 to comply with semver2

--- a/h2o-helm/templates/statefulset.yaml
+++ b/h2o-helm/templates/statefulset.yaml
@@ -21,7 +21,7 @@ spec:
       {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.name }}:{{ .Values.image.tag | default (printf "3.%s" .Chart.AppVersion) }}"
           {{- if .Values.image.command }}
           command: {{ .Values.image.command }}
           {{else}}
