--- a/h2o-py/conda/h2o/meta.yaml
+++ b/h2o-py/conda/h2o/meta.yaml
@@ -1,11 +1,14 @@
 {% set data = load_setup_py_data() %}
 
+build:
+  noarch: python
+
 package:
   name: h2o
   version: {{ data.get("version") }}
 
 source:
-  path: ../..
+  path: ../../..
 
 requirements:
   build:
