Revert "noarch conda build"
This reverts commit c063c772c2be198a757143ad65675696a7eef1dc.

--- a/h2o-py/conda/h2o/meta.yaml
+++ b/h2o-py/conda/h2o/meta.yaml
@@ -1,14 +1,11 @@
 {% set data = load_setup_py_data() %}
 
-build:
-  noarch: python
-
 package:
   name: h2o
   version: {{ data.get("version") }}
 
 source:
-  path: ../../..
+  path: ../..
 
 requirements:
   build:
